--- a/public/index.html
+++ b/public/index.html
@@ -696,6 +696,7 @@ html.lenis {
         </defs>
       </svg></div>
   </a>
+  <div id="root"></div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6554848df1e1db752b51c376" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <script src="https://unpkg.com/split-type"></script>
