update from webflow

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Thu Nov 30 2023 04:14:54 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Dec 14 2023 10:37:32 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6554848df1e1db752b51c37e" data-wf-site="6554848df1e1db752b51c376">
 <head>
   <meta charset="utf-8">
@@ -115,7 +115,7 @@ html.lenis {
     <div class="container hero">
       <div class="hero__content-wrapper">
         <div class="margin-bottom--small">
-          <p class="pretilt">AI HACKATHON 2023</p>
+          <p class="pretilt">AI HACKATHON</p>
           <h1 class="h1 skew-up">FACE ANALYSIS CHALLENGE</h1>
         </div>
         <div class="div-block-2">
@@ -149,14 +149,14 @@ html.lenis {
     </div>
     <div class="div-block-10"><img src="images/123Z_2101.w020.n001.946B.p15-1-1.png" loading="lazy" sizes="100vw" srcset="images/123Z_2101.w020.n001.946B.p15-1-1-p-500.png 500w, images/123Z_2101.w020.n001.946B.p15-1-1-p-800.png 800w, images/123Z_2101.w020.n001.946B.p15-1-1-p-1080.png 1080w, images/123Z_2101.w020.n001.946B.p15-1-1-p-1600.png 1600w, images/123Z_2101.w020.n001.946B.p15-1-1-p-2000.png 2000w, images/123Z_2101.w020.n001.946B.p15-1-1.png 2880w" alt="" class="hero-img"></div><img src="images/Ellipse-3-1-1.png" loading="lazy" sizes="(max-width: 991px) 70vw, 50vw" alt="" width="817" srcset="images/Ellipse-3-1-1-p-500.png 500w, images/Ellipse-3-1-1-p-800.png 800w, images/Ellipse-3-1-1.png 1634w" class="blue-shape"><img src="images/Ellipse-5-1-1.png" loading="lazy" sizes="(max-width: 991px) 65vw, 60vw" alt="" width="817" srcset="images/Ellipse-5-1-1-p-500.png 500w, images/Ellipse-5-1-1-p-800.png 800w, images/Ellipse-5-1-1-p-1080.png 1080w, images/Ellipse-5-1-1-p-1600.png 1600w, images/Ellipse-5-1-1.png 2578w" class="orange-shape"><img src="images/Ellipse-2.png" loading="lazy" sizes="(max-width: 991px) 70vw, 65vw" alt="" width="817" srcset="images/Ellipse-2-p-500.png 500w, images/Ellipse-2-p-800.png 800w, images/Ellipse-2.png 1846w" class="purple-shape">
   </section>
-  <section data-w-id="86626f7d-f61f-bbcb-98c8-6a310f86472e" class="section-default relative"><img src="images/Ellipse-3.png" loading="lazy" width="523" sizes="(max-width: 991px) 50vw, 523px" alt="" srcset="images/Ellipse-3-p-500.png 500w, images/Ellipse-3.png 1046w" class="reason__blue-shape"><img src="images/Cone.png" loading="lazy" width="247.5" alt="" class="reason__ball"><img src="images/Cone-1.png" loading="lazy" width="162" alt="" class="reason__blue-cube"><img src="images/Ellipse-4.png" loading="lazy" width="523" sizes="(max-width: 767px) 100vw, 523px" alt="" srcset="images/Ellipse-4-p-500.png 500w, images/Ellipse-4.png 1194w" class="reason__purple-shape">
+  <section data-w-id="86626f7d-f61f-bbcb-98c8-6a310f86472e" class="section-default relative"><img src="images/Ellipse-3.png" loading="lazy" width="523" sizes="(max-width: 767px) 50vw, (max-width: 991px) 53vw, 523px" alt="" srcset="images/Ellipse-3-p-500.png 500w, images/Ellipse-3.png 1046w" class="reason__blue-shape"><img src="images/Cone.png" loading="lazy" width="247.5" alt="" class="reason__ball"><img src="images/Cone-1.png" loading="lazy" width="162" alt="" class="reason__blue-cube"><img src="images/Ellipse-4.png" loading="lazy" width="523" sizes="(max-width: 767px) 100vw, 523px" alt="" srcset="images/Ellipse-4-p-500.png 500w, images/Ellipse-4.png 1194w" class="reason__purple-shape">
     <div class="padding-vertical relative">
       <div class="container">
         <div class="reason__grid-wrapper">
           <div class="reason__grid-col-1">
             <div class="reason__grid-sticky-wrapper">
               <p class="pretilt">HACK NOW!</p>
-              <h2 class="h2 skew-up">3 lý do tham gia AI Hackathon 2023: Face Analysis Challenge</h2>
+              <h2 class="h2 skew-up">3 lý do tham gia AI Hackathon: <br>Face Analysis Challenge</h2>
             </div>
           </div>
           <div class="reson__grid-col-2">
@@ -307,7 +307,7 @@ html.lenis {
       <div id="regulation" class="container">
         <div class="rule__title-wrapper">
           <p class="pretilt">HACK NOW!</p>
-          <h2 class="h2 skew-up">Thể lệ aI hackathon 2023: Face analysis challenge</h2>
+          <h2 class="h2 skew-up">Thể lệ aI hackathon:<br>Face analysis challenge</h2>
         </div>
         <div class="rule__grid-component">
           <div id="w-node-_842225fa-5ea3-cf41-642d-afdaee0ffd29-2b51c37e" class="rule_who">
@@ -338,6 +338,12 @@ html.lenis {
                   <circle cx="2.5" cy="3" r="2.5" fill="white"></circle>
                 </svg></div>
               <p class="rule-text">Các thí sinh phải cam đoan rằng Bài dự thi của bạn là bài làm của bạn và nhóm của bạn, do đó, bạn là người sở hữu và chủ sở hữu độc quyền của Bài dự thi.</p>
+            </div>
+            <div class="div-block-7">
+              <div class="w-embed"><svg width="5" height="6" viewbox="0 0 5 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <circle cx="2.5" cy="3" r="2.5" fill="white"></circle>
+                </svg></div>
+              <p class="rule-text">Các thí sinh không được phép sao chép, chia sẻ dữ liệu do BTC cung cấp cho bên thứ 3 bất kỳ mà chưa được sự đồng ý, cho phép từ BTC.</p>
             </div>
             <div class="div-block-7">
               <div class="w-embed"><svg width="5" height="6" viewbox="0 0 5 6" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -395,7 +401,7 @@ html.lenis {
               </div>
               <div class="benefit_content-wrapper">
                 <p class="h4">Workshop</p>
-                <p class="rule-text">Lắng nghe những chia sẻ từ chuyên gia về các bí kíp “sống còn” khi tham dự AI Hackathon 2023.</p>
+                <p class="rule-text">Lắng nghe những chia sẻ từ chuyên gia về các bí kíp “sống còn” khi tham dự AI Hackathon.</p>
               </div>
             </div>
             <div id="w-node-b9db6a79-c041-ab64-90e7-cfd75b411276-2b51c37e" class="benefit-card">
@@ -459,7 +465,7 @@ html.lenis {
               <div class="timeline_item is-1">
                 <div class="timeline__inner-wrapper">
                   <div class="h5">Registration</div>
-                  <p class="text-size-regular">(24/11-14/12)</p>
+                  <p class="text-size-regular">(14/12 - 04/01)</p>
                 </div>
                 <div class="div-block-7">
                   <div class="w-embed"><svg width="5" height="6" viewbox="0 0 5 6" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -479,7 +485,7 @@ html.lenis {
               <div class="timeline_item is-2">
                 <div class="timeline__inner-wrapper">
                   <div class="h5"><strong>Round 1 </strong></div>
-                  <p class="text-size-regular">(18/12-03/01)</p>
+                  <p class="text-size-regular">(04/01 - 18/01)</p>
                 </div>
                 <div class="div-block-7">
                   <div class="w-embed"><svg width="5" height="6" viewbox="0 0 5 6" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -514,7 +520,7 @@ html.lenis {
               <div class="timeline_item is-3">
                 <div class="timeline__inner-wrapper">
                   <div class="h5">Final Round</div>
-                  <p class="text-size-regular">(08/01-20/01)</p>
+                  <p class="text-size-regular">(18/01 - 27/01)</p>
                 </div>
                 <div class="div-block-7">
                   <div class="w-embed"><svg width="5" height="6" viewbox="0 0 5 6" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -600,7 +606,7 @@ html.lenis {
         </div>
       </div>
       <div data-w-id="b38381bc-2f26-6c16-edfd-3ace9e97a99a" style="-webkit-transform:translate3d(0%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="sponsor-logo">
-        <div class="sponsor__logo-wrapper"><img src="images/Copy-of-PIXTA_VN_white-1-1.png" loading="lazy" width="338" alt="" class="sponsor__logo-img"><img src="images/logo-cohost-ai-6-1.png" loading="lazy" width="338" sizes="338px" alt="" srcset="images/logo-cohost-ai-6-1-p-500.png 500w, images/logo-cohost-ai-6-1.png 690w" class="sponsor__logo-img"><img src="images/logo-Viblo-02-3.png" loading="lazy" width="145" alt="" class="sponsor__logo-img"><img src="images/Viện-Toán-White-2.png" loading="lazy" width="150.5" alt="" class="sponsor__logo-img"></div>
+        <div class="sponsor__logo-wrapper"><img src="images/Copy-of-PIXTA_VN_white-1-1.png" loading="lazy" width="338" alt="" class="sponsor__logo-img"><img src="images/logo-cohost-ai-6-1.png" loading="lazy" width="338" sizes="338px" alt="" srcset="images/logo-cohost-ai-6-1-p-500.png 500w, images/logo-cohost-ai-6-1.png 690w" class="sponsor__logo-img"><img src="images/logo-Viblo-02-3.png" loading="lazy" width="145" alt="" class="sponsor__logo-img"></div>
         <div class="sponsor__logo-wrapper"><img src="images/Copy-of-PIXTA_VN_white-1-1.png" loading="lazy" width="338" alt="" class="sponsor__logo-img"><img src="images/logo-cohost-ai-6-1.png" loading="lazy" width="338" sizes="338px" alt="" srcset="images/logo-cohost-ai-6-1-p-500.png 500w, images/logo-cohost-ai-6-1.png 690w" class="sponsor__logo-img"><img src="images/logo-Viblo-02-3.png" loading="lazy" width="145" alt="" class="sponsor__logo-img"><img src="images/Viện-Toán-White-2.png" loading="lazy" width="150.5" alt="" class="sponsor__logo-img"></div>
       </div>
     </div>
@@ -609,15 +615,15 @@ html.lenis {
     <div class="padding-vertical relative">
       <div class="container relative">
         <div class="community-wrapper">
-          <div class="comunity-img-ratio"><img src="images/image-30-1.png" loading="lazy" width="518" sizes="(max-width: 479px) 92vw, (max-width: 991px) 90vw, 38vw" alt="" srcset="images/image-30-1-p-500.png 500w, images/image-30-1.png 841w" class="img-fit-absolute"></div>
+          <div class="comunity-img-ratio"><img src="images/image-30-1.png" loading="lazy" width="518" sizes="(max-width: 991px) 90vw, 38vw" alt="" srcset="images/image-30-1-p-500.png 500w, images/image-30-1.png 841w" class="img-fit-absolute"></div>
           <div class="div-block-8">
             <div class="community-content-col">
               <p class="pretilt"><strong>JOIN OUR</strong></p>
               <div class="margin-bottom--small">
-                <h2 class="eng-h2 skew-up"><strong>AI HACKATHON 2023 COMMUNITY</strong></h2>
+                <h2 class="eng-h2 skew-up"><strong>AI HACKATHON COMMUNITY</strong></h2>
               </div>
               <div class="margin-bottom--small">
-                <p class="text-size-medium">Tham gia ngay cộng đồng để cập nhật nhanh nhất những thông tin về AI Hackathon 2023: Face Analysis Challenge</p>
+                <p class="text-size-medium">Tham gia ngay cộng đồng để cập nhật nhanh nhất những thông tin về AI Hackathon: Face Analysis Challenge</p>
               </div>
               <a data-w-id="a3e91084-2e1c-f70b-3b84-5dc7c6f56eb8" href="https://docs.google.com/forms/d/e/1FAIpQLSeGf4Adwg5e_acllaU8xoHyS-Qkaj45ypG8zBEiPuBuAZ1PEQ/closedform" target="_blank" class="btn w-inline-block">
                 <div class="btn-inner-wrapper">
@@ -648,10 +654,10 @@ html.lenis {
               </mask>
               <path d="M6.14648 53.175L3.43739 51.6538L0.838377 56.2821H6.14648V53.175ZM29.1391 12.23V9.12297H27.3205L26.43 10.7087L29.1391 12.23ZM15.4299 53.175V56.2821H17.2485L18.139 54.6963L15.4299 53.175ZM21.2729 42.7698V39.6628H19.4543L18.5639 41.2485L21.2729 42.7698ZM31.9601 42.7698H35.0671V39.6628H31.9601V42.7698ZM31.9601 53.175H28.8531V56.2821H31.9601V53.175ZM40.0875 53.175V56.2821H43.1945V53.175H40.0875ZM40.0875 12.23H43.1945V9.12297H40.0875V12.23ZM31.9601 37.7765V40.8835H35.0671V37.7765H31.9601ZM31.9601 23.7382H35.0671V11.8596L29.251 22.2169L31.9601 23.7382ZM24.0769 37.7765L21.3678 36.2552L18.7688 40.8835H24.0769V37.7765ZM8.85558 54.6963L31.8482 13.7513L26.43 10.7087L3.43739 51.6538L8.85558 54.6963ZM15.4299 50.068H6.14648V56.2821H15.4299V50.068ZM18.5639 41.2485L12.7208 51.6538L18.139 54.6963L23.982 44.2911L18.5639 41.2485ZM31.9601 39.6628H21.2729V45.8768H31.9601V39.6628ZM35.0671 53.175V42.7698H28.8531V53.175H35.0671ZM40.0875 50.068H31.9601V56.2821H40.0875V50.068ZM36.9805 12.23V53.175H43.1945V12.23H36.9805ZM29.1391 15.337H40.0875V9.12297H29.1391V15.337ZM35.0671 37.7765V23.7382H28.8531V37.7765H35.0671ZM29.251 22.2169L21.3678 36.2552L26.786 39.2978L34.6692 25.2595L29.251 22.2169ZM24.0769 40.8835H31.9601V34.6695H24.0769V40.8835Z" fill="white" mask="url(#path-5-outside-1_158_15)"></path>
             </svg></div>
-          <h3 class="h5">AI Hackathon 2023: Face Analysis Challenge</h3>
+          <h3 class="h5">AI Hackathon: Face Analysis Challenge</h3>
           <p class="text-size-regular">Cuộc thi được đồng tổ chức bởi SAMI - HUST, PIXTA Vietnam và Co-Host AI cùng các nhà tài trợ khác. Cùng tạo nên một sân chơi dành cho tất cả những người đam mê công nghệ Trí Tuệ Nhân Tạo để hợp tác, đổi mới và Hack!</p>
           <div class="div-block-9">
-            <p>Theo dõi ngay các kênh chính thức của AI Hackathon 2023:</p>
+            <p>Theo dõi ngay các kênh chính thức của AI Hackathon:</p>
             <div data-w-id="2956b869-b8bd-0af5-c755-a05defe19155" class="text-link-wrapper">
               <a href="https://www.facebook.com/AIforFutureVietnam" target="_blank" class="link footer">Facebook</a>
               <div style="-webkit-transform:translate3d(-101%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-101%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-101%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-101%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="link-underline"></div>
@@ -661,7 +667,7 @@ html.lenis {
               <div style="-webkit-transform:translate3d(-101%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-101%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-101%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-101%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="link-underline"></div>
             </div>
           </div>
-          <p class="text-size-regular">© 2023 AI Hackathon All Right Reserved</p>
+          <p class="text-size-regular">© AI Hackathon All Right Reserved</p>
         </div>
         <div class="hung-le-wrapper">
           <div class="footer__credit">
@@ -696,7 +702,6 @@ html.lenis {
         </defs>
       </svg></div>
   </a>
-  <div id="root"></div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6554848df1e1db752b51c376" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <script src="https://unpkg.com/split-type"></script>
