--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Thu Dec 14 2023 10:37:32 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Dec 14 2023 14:23:35 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6554848df1e1db752b51c37e" data-wf-site="6554848df1e1db752b51c376">
 <head>
   <meta charset="utf-8">
@@ -350,7 +350,7 @@ html.lenis {
                   <circle cx="2.5" cy="3" r="2.5" fill="white"></circle>
                 </svg></div>
               <p class="rule-text">Quyết định cuối cùng sẽ thuộc về Ban Giám Khảo và cuộc thi.</p>
-            </div><img src="images/Group-29-1.png" loading="lazy" alt="" class="note-illust">
+            </div>
           </div>
           <div id="w-node-_2dd6e00a-3b04-aba4-42c2-88f12075e0f8-2b51c37e" class="rule_who">
             <h3 class="h5">Cách thức đăng ký</h3>
@@ -655,7 +655,7 @@ html.lenis {
               <path d="M6.14648 53.175L3.43739 51.6538L0.838377 56.2821H6.14648V53.175ZM29.1391 12.23V9.12297H27.3205L26.43 10.7087L29.1391 12.23ZM15.4299 53.175V56.2821H17.2485L18.139 54.6963L15.4299 53.175ZM21.2729 42.7698V39.6628H19.4543L18.5639 41.2485L21.2729 42.7698ZM31.9601 42.7698H35.0671V39.6628H31.9601V42.7698ZM31.9601 53.175H28.8531V56.2821H31.9601V53.175ZM40.0875 53.175V56.2821H43.1945V53.175H40.0875ZM40.0875 12.23H43.1945V9.12297H40.0875V12.23ZM31.9601 37.7765V40.8835H35.0671V37.7765H31.9601ZM31.9601 23.7382H35.0671V11.8596L29.251 22.2169L31.9601 23.7382ZM24.0769 37.7765L21.3678 36.2552L18.7688 40.8835H24.0769V37.7765ZM8.85558 54.6963L31.8482 13.7513L26.43 10.7087L3.43739 51.6538L8.85558 54.6963ZM15.4299 50.068H6.14648V56.2821H15.4299V50.068ZM18.5639 41.2485L12.7208 51.6538L18.139 54.6963L23.982 44.2911L18.5639 41.2485ZM31.9601 39.6628H21.2729V45.8768H31.9601V39.6628ZM35.0671 53.175V42.7698H28.8531V53.175H35.0671ZM40.0875 50.068H31.9601V56.2821H40.0875V50.068ZM36.9805 12.23V53.175H43.1945V12.23H36.9805ZM29.1391 15.337H40.0875V9.12297H29.1391V15.337ZM35.0671 37.7765V23.7382H28.8531V37.7765H35.0671ZM29.251 22.2169L21.3678 36.2552L26.786 39.2978L34.6692 25.2595L29.251 22.2169ZM24.0769 40.8835H31.9601V34.6695H24.0769V40.8835Z" fill="white" mask="url(#path-5-outside-1_158_15)"></path>
             </svg></div>
           <h3 class="h5">AI Hackathon: Face Analysis Challenge</h3>
-          <p class="text-size-regular">Cuộc thi được đồng tổ chức bởi SAMI - HUST, PIXTA Vietnam và Co-Host AI cùng các nhà tài trợ khác. Cùng tạo nên một sân chơi dành cho tất cả những người đam mê công nghệ Trí Tuệ Nhân Tạo để hợp tác, đổi mới và Hack!</p>
+          <p class="text-size-regular">Cuộc thi được đồng tổ chức bởi PIXTA Vietnam, Co-Host AI và Viblo và các nhà tài trợ khác. Cùng tạo nên một sân chơi dành cho tất cả những người đam mê công nghệ Trí Tuệ Nhân Tạo để hợp tác, đổi mới và Hack!</p>
           <div class="div-block-9">
             <p>Theo dõi ngay các kênh chính thức của AI Hackathon:</p>
             <div data-w-id="2956b869-b8bd-0af5-c755-a05defe19155" class="text-link-wrapper">
@@ -667,7 +667,7 @@ html.lenis {
               <div style="-webkit-transform:translate3d(-101%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-101%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-101%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-101%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="link-underline"></div>
             </div>
           </div>
-          <p class="text-size-regular">© 2023 AI Hackathon All Right Reserved</p>
+          <p class="text-size-regular">© AI Hackathon All Right Reserved</p>
         </div>
         <div class="hung-le-wrapper">
           <div class="footer__credit">
